examples/invalid/58_struct_literal_generic_arity.lane
module Examples.Invalid.StructLiteralGenericArity

struct PairBox[A, B] {
  left : A
  right : B
}

let value : PairBox[Int, Bool] = PairBox[Int]::{ left: 1, right: true }
